# ibge-sidra-tabelas

./: .gitignore  CREATING_PIPELINES.md  LICENSE  README.md  estimapop.py  export-dimensao.py  fetch-metadata.py  pyproject.toml  run-all.py  run-all.sh  transform-all.sh  utils.py
.claude/: settings.local.json
ibge_sidra_tabelas/: config.py  sidra.py  storage.py  utils.py
ibge_tabelas/: __init__.py  config.py  database.py  sidra.py  storage.py  utils.py
pipelines/pam/: README.md
pipelines/pam/lavouras_permanentes/: transform.sql  transform.toml
pipelines/pam/lavouras_temporarias/: fetch.toml  transform.sql  transform.toml
pipelines/pevs/: README.md
pipelines/pevs/area_florestal/: transform.sql  (+1 more)
pipelines/pib_munic/: transform.sql
pipelines/ppm/: README.md
scripts/: censo_populacao.py  contagem_populacao.py  contagem_populacao_1996.py  contagem_populacao_2007.py  estimapop.py  pam.py  pibmunic.py  pibmunic.toml  run.py  transform.py
scripts/pam/: README.md  lavouras_permanentes.py  lavouras_permanentes.toml  lavouras_temporarias.py
scripts/pevs/: README.md  area_florestal.py  area_florestal.toml  producao.py  producao.toml
scripts/populacao/: censo_populacao.py  contagem_populacao.py  contagem_populacao.toml  estimapop.py  estimapop.toml
scripts/ppm/: README.md  exploracao.py  exploracao.toml  producao.py  rebanhos.py
scripts/snpc/: README.md  inpc.py  inpc.toml  ipca.py  ipca15.py
src/ibge_sidra_tabelas/: __init__.py  base.py  config.py  database.py  models.py  sidra.py  storage.py  toml_runner.py  transform_runner.py  utils.py
src/sidra_sql/: __init__.py  cli.py  config.py  database.py  models.py  plugin_manager.py  runner.py  scaffold.py  sidra.py  storage.py  toml_runner.py  transform_runner.py  utils.py  validator.py
tests/: test_base.py  test_config.py  test_database.py  test_sidra.py  test_storage.py  test_transform_runner.py  test_utils.py  test_validator.py
transformations/: pibmunic.toml
transformations/pam/: lavouras_permanentes.sql  lavouras_temporarias.sql
transformations/pevs/: area_florestal.sql  producao.sql
transformations/populacao/: estimapop.sql  estimapop.toml
transformations/ppm/: exploracao.toml  producao.sql  producao.toml  rebanhos.toml
transformations/snpc/: ipca15.toml
(+20 files in other folders)
