[project]
name = "ibge-sidra-tabelas"
version = "0.1.0"
description = "Tabelas de dados agregados do IBGE"
readme = "README.md"
authors = [
    {name="Daniel Komesu", email="danielkomesu@gmail.com"},
]

requires-python = ">=3.13"

dependencies = [
    "sidra-fetcher @ git+ssh://git@github.com/dankkom/sidra-fetcher.git@main#egg=sidra-fetcher",
    "pandas>=2.3.0",
    "psycopg[binary]>=3.2.9",
    "sqlalchemy>=2.0.41",
    "requests>=2.32.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 79
lint.extend-select = ["I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
