[project]
name = "sidra-sql"
version = "1.1.0"
description = "Tabelas de dados agregados do IBGE"
readme = "README.md"
authors = [
    { name = "Komesu, D.K.", email = "daniel@dkko.me" },
]
license = { file = "LICENSE" }

dependencies = [
    "sidra-fetcher @ git+ssh://git@github.com/Quantilica/sidra-fetcher.git@v0.6.1#egg=sidra-fetcher",
    "psycopg[binary]>=3.2.9",
    "sqlalchemy>=2.0.41",
    "orjson>=3.11.7",
    "platformdirs>=4.9.6",
    "typer>=0.24.1",
]

[project.scripts]
sidra-sql = "sidra_sql.cli:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
